--- a/package.json
+++ b/package.json
@@ -9,14 +9,9 @@
     "react": "^16.2.0",
     "react-datepicker": "^1.0.4",
     "react-dom": "^16.2.1",
-    "react-redux": "^5.0.6",
     "react-redux-i18n": "^1.9.3",
     "react-router-dom": "^4.2.2",
-    "react-router-redux": "^4.0.8",
-    "react-scripts": "1.0.17",
-    "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "react-scripts": "1.0.17"
   },
   "scripts": {
     "start": "react-scripts start",
